--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -3,7 +3,13 @@
 @tailwind utilities;
 
 .App {
-  text-align: center;
+  margin-right: .75rem;
+  margin-left: .75rem;
+  margin-top: 1rem;
+  display: flex;
+  flex: 1 1 auto;
+  align-items: center;
+  justify-content: center;
 }
 
 .App-logo {
